--- a/quizjs.html
+++ b/quizjs.html
@@ -93,7 +93,7 @@
                     se suas vidas chegarem a 0 <br>
                     vai ter um aviso na tela <br>
                     escrito estude mais , <br>
-                    para você tentar dnv , apenas <br>
+                    para você tentar novamente , apenas <br>
                     reinicie a página para tentar <br>
                     novamente.
 
@@ -248,7 +248,7 @@
 
                 Qual será o resultado desse código: <br>
                 <strong style="background-color: yellow; color: black;">Nome = "Anderson" <br>
-                    Idade = 24 <br>
+                    Idade = 23 <br>
                     print(f"{Nome} tem {Idade} anos de idade.")</strong>
 
             </h3>
