Limpando Arquivos e Códigos.

--- a/css.html
+++ b/css.html
@@ -100,7 +100,7 @@
 
         </div>
 
-        <img src="R.png" alt="" class="img-effect" width="350px">
+        <img src="https://logodix.com/logo/470216.png" alt="" class="img-effect" width="350px">
 
     </div>
 
@@ -113,7 +113,9 @@
     <div class="title-roadmap">
 
 
-        <img class="img-profs" src="man-with-laptop-working-free-vector.jpg" alt="" width="350px">
+        <img class="img-profs"
+            src="https://cdn3d.iconscout.com/3d/premium/thumb/programmer-3d-icon-download-in-png-blend-fbx-gltf-file-formats--programming-developer-full-stack-development-pack-design-icons-6964021.png?f=webp"
+            alt="" width="350px">
 
 
 
@@ -143,9 +145,11 @@
 
         <div class="opcoes1">
 
-            <h1 class="nome-profs">Teacher Mosh</h1> <br>
+            <h1 class="nome-profs">Bro Code</h1> <br>
 
-            <img class="img-profs" src="prof 3.webp" alt="" width="300px">
+            <img class="img-profs"
+                src="https://tse4.mm.bing.net/th/id/OIP.EvahIk_cSpDbSoUthgsRxAHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" alt=""
+                width="300px">
 
             <details style="margin: 20px;
               " class="detalhes">
@@ -175,7 +179,9 @@
 
             <h1 class="nome-profs2">Gustavo Guanabara</h1> <br>
 
-            <img class="img-profs2" src="prof2.webp" alt="" width="300px">
+            <img class="img-profs2"
+                src="https://vp2uploads.s3.amazonaws.com/18443/81/palestrantes/81cd9c37c4beeb851b28ebc95c619b5ffb0ff9b3.png"
+                alt="" width="300px">
 
             <details style="margin: 20px;
               " class="detalhes">
@@ -235,7 +241,8 @@
         </div>
 
 
-        <img class="img-profs" src="OIP.webp" alt="" width="350px">
+        <img class="img-profs" src="https://cdn0.iconfinder.com/data/icons/3d-coding/512/Code_Review.png" alt=""
+            width="350px">
 
 
 
