--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 </summary>
 
                 <p>
-                    Aprenda com a <strong>DevTask</strong>: <br> videoaulas, conteúdos escritos,<br> recursos com
-                    inteligência artificial, <br>exemplos práticos e projetos <br>prontos, abrangendo tecnologias
+                    Aprenda com a <strong>DevTask</strong>: <br> videoaulas, conteúdos escritos,<br> exemplos práticos e
+                    <br>prontos, abrangendo tecnologias
                     como <br><strong>JavaScript</strong>, <strong>Python</strong>, <strong>HTML</strong> e
                     <strong>CSS</strong>.
                 </p>
@@ -129,7 +129,8 @@
         </div>
 
 
-        <img src="11838987.png" class="img-fundoLearn" alt="" width="600px">
+        <img src="https://cdn-icons-png.flaticon.com/512/10771/10771017.png" class="img-fundoLearn" alt=""
+            width="400px">
 
     </div>
     <div class="AEIO">
@@ -141,7 +142,8 @@
 
             <div class="fundo-learn">
 
-                <img src="python-logo (1).png" alt="" class="img-fundoLearn" width="200px">
+                <img src="https://cdn.icon-icons.com/icons2/112/PNG/512/python_18894.png" alt="" class="img-fundoLearn"
+                    width="200px">
                 <br>
                 <h3 class="escrever">Python</h3>
 
@@ -173,7 +175,7 @@
 
             <div class="fundo-learn">
 
-                <img src="javascript-vector-logo-yellow-png-transparent-javascript-vector-12.png" alt=""
+                <img src="https://logospng.org/download/javascript/logo-javascript-1024.png" alt=""
                     class="img-fundoLearn" width="200px">
                 <br>
                 <h3 class="escrever">JavaScript</h3>
@@ -205,7 +207,8 @@
 
             <div class="fundo-learn">
 
-                <img src="R.png" alt="" class="img-fundoLearn" width="210px" height="200px">
+                <img src="https://logodix.com/logo/470216.png" alt="" class="img-fundoLearn" width="210px"
+                    height="200px">
                 <br>
                 <h3 class="escrever">Html + Css</h3>
 
@@ -267,13 +270,13 @@
 
             </details>
 
-            <img src="" alt="">
+
 
         </div>
 
 
         <img class="img-fundoLearn"
-            src="3d-minimal-programming-icon-coding-screen-web-development-concept-laptop-with-a-coding-screen-and-a-coding-icon-3d-illustration-png.webp"
+            src="https://static.vecteezy.com/system/resources/previews/019/153/003/original/3d-minimal-programming-icon-coding-screen-web-development-concept-laptop-with-a-coding-screen-and-a-coding-icon-3d-illustration-png.png"
             alt="" width="600px">
     </div>
 
@@ -282,8 +285,9 @@
 
         <div class="Roadmap">
 
-            <img class="img-roadmap" src="programadores-estan-creando-aplicaciones-web_999616-705.avif" alt=""
-                width="300px">
+            <img style="animation: none; border: none;" class="img-roadmap"
+                src="https://static.vecteezy.com/system/resources/previews/015/072/070/original/games-folder-3d-rendering-isometric-icon-png.png"
+                alt="" width="250px">
 
             <br>
 
@@ -316,7 +320,9 @@
 
         <div class="Roadmap">
 
-            <img class="img-roadmap" src="front-end-programmer.avif" alt="" width="300px" height="250px">
+            <img style="animation: none; border: none;" class="img-roadmap"
+                src="https://static.vecteezy.com/system/resources/thumbnails/010/795/093/small_2x/web-development-3d-illustration-png.png"
+                alt="" width="300px" height="250px">
 
             <br>
 
@@ -347,7 +353,8 @@
 
         <div class="Roadmap">
 
-            <img class="img-roadmap" src="web-coding-illustration-concept-white-background_701961-1809.avif" alt=""
+            <img style="animation: none; border: none;" class=" img-roadmap"
+                src="https://cdn3d.iconscout.com/3d/premium/thumb/coding-11533547-9394552.png?f=webp" alt=""
                 width="300px" height="250px">
 
             <br>
@@ -383,10 +390,10 @@
 
 
         <div class="ABC">
-            <h1 style="text-align: center;" class="titles2">QuizGame</h1>
+            <h1 class="titles2">QuizGame</h1>
 
             <h3>
-                <p style="text-align: center;">
+                <p>
                     Pequeno gafanhoto ! <br> bora ir para prática mental? <br>
                     Selecione seu nivel e <br> jogue o QuizGame da DevTask !!
                 </p>
@@ -436,7 +443,8 @@
             <br>
 
 
-            <img src="n1.png" alt="" class="img-nivel" width="300px">
+            <img src="https://cdn2.iconfinder.com/data/icons/coding-36/512/Programmer.png" alt="" class="img-nivel"
+                width="300px">
 
             <details class="detalhes">
                 <summary class="detalhes-smr3">
@@ -467,7 +475,8 @@
             <br>
 
 
-            <img src="7502476.png" alt="" class="img-nivel" width="300px">
+            <img src="https://cdn3d.iconscout.com/3d/premium/thumb/programmer-doing-coding-3d-icon-png-download-10193071.png"
+                alt="" class="img-nivel" width="300px">
 
             <details class="detalhes">
                 <summary style="animation: bordaCor4 2s linear infinite" class="detalhes-smr3">
@@ -494,7 +503,8 @@
 
             <br>
 
-            <img src="red_teaming.webp" alt="" class="img-nivel" width="300px">
+            <img src="https://cdn3d.iconscout.com/3d/premium/thumb/professional-programmer-writing-code-for-testing-computer-software-3d-icon-png-download-10193072.png
+            " alt="" class="img-nivel" width="300px">
 
             <details class="detalhes">
                 <summary style="animation: bordaCor5 2s linear infinite" class="detalhes-smr3">
