--- a/python.html
+++ b/python.html
@@ -97,7 +97,8 @@
 
         </div>
 
-        <img src="python-logo (1).png" alt="" class="img-effect" width="350px">
+        <img style="  border-radius: 50%;" src="https://cdn.icon-icons.com/icons2/112/PNG/512/python_18894.png" alt=""
+            class="img-effect" width="350px">
 
     </div>
 
@@ -110,7 +111,9 @@
     <div class="title-roadmap">
 
 
-        <img class="img-profs" src="man-with-laptop-working-free-vector.jpg" alt="" width="350px">
+        <img class="img-profs"
+            src="https://cdn3d.iconscout.com/3d/premium/thumb/programmer-3d-icon-download-in-png-blend-fbx-gltf-file-formats--programming-developer-full-stack-development-pack-design-icons-6964021.png?f=webp"
+            alt="" width="350px">
 
 
 
@@ -142,7 +145,9 @@
 
             <h1 class="nome-profs">Teacher Mosh</h1> <br>
 
-            <img class="img-profs" src="prof1.webp" alt="" width="300px">
+            <img class="img-profs"
+                src="https://tse2.mm.bing.net/th/id/OIP.wzrx1W4TAHusQMYliiuc-gHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" alt=""
+                width="300px">
 
             <details style="margin: 20px;
               " class="detalhes">
@@ -172,7 +177,9 @@
 
             <h1 class="nome-profs2">Gustavo Guanabara</h1> <br>
 
-            <img class="img-profs2" src="prof2.webp" alt="" width="300px">
+            <img class="img-profs2"
+                src="https://vp2uploads.s3.amazonaws.com/18443/81/palestrantes/81cd9c37c4beeb851b28ebc95c619b5ffb0ff9b3.png"
+                alt="" width="300px">
 
             <details style="margin: 20px;
               " class="detalhes">
@@ -232,7 +239,8 @@
         </div>
 
 
-        <img class="img-profs" src="OIP.webp" alt="" width="350px">
+        <img class="img-profs" src="https://cdn0.iconfinder.com/data/icons/3d-coding/512/Code_Review.png" alt=""
+            width="350px">
 
 
 
@@ -355,7 +363,7 @@
 
                     Nesse caso, a mensagem exibida será que o aluno foi reprovado.
                 </p>
-                
+
                 <p>Eai Bora Práticar? <br>
                     abaixo temos um campo <br> de treinamento <br>
                     com as bordas RGB <br>
@@ -426,7 +434,7 @@
 
                     Quando o contador passa de 10 <br> o laço termina sozinho.
                 </p>
-                
+
                 <p>Eai Bora Práticar? <br>
                     abaixo temos um campo <br> de treinamento <br>
                     com as bordas RGB <br>
