Limpando Arquivos e Mudando o Leyout

--- a/game1.html
+++ b/game1.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="style.css">
-     
+    <link rel="stylesheet" href="style.css">
+
     <title>QuizGame</title>
 </head>
+
 <body>
-       <div class="logoBoard">
+    <div class="logoBoard">
         <h1 class="title">DevTask</h1>
 
         <div class="detalhes-div">
@@ -63,20 +65,20 @@
     </div>
 
 
-     <h1 style="font-size: 75px;" class="welcome">Bem Vindo! Ao Nivel Iniciante!</h1>
+    <h1 style="font-size: 75px;" class="welcome">Bem Vindo! Ao Nivel Iniciante!</h1>
 
-      <div class="div-title-learn">
+    <div class="div-title-learn">
 
         <div class="ABC">
 
             <h1 style="text-align: center;" class="titles2">Eai Player!</h1>
 
-            <h3 style="text-align: center;" >
+            <h3 style="text-align: center;">
 
-              
-              pronto para ser desafiado? <br>
-              se sim , veja como jogar <br>
-              clicando em "Como Jogar?".
+
+                pronto para ser desafiado? <br>
+                se sim , veja como jogar <br>
+                clicando em "Como Jogar?".
 
             </h3>
 
@@ -88,16 +90,16 @@
 
                 </summary>
 
-<p>
-    Eai <strong>Pequeno Player</strong>! 👾<br>
-    Pronto para ser desafiado?<br>
-    Se sim, veja como jogar clicando em "<strong>Como Jogar?</strong>"<br><br>
-    <strong>Regras do jogo:</strong><br>
-    - Você começa com <strong>3 vidas</strong>.<br>
-    - A cada pergunta errada, você perde <strong>1 vida</strong>.<br>
-    - Se suas vidas chegarem a <strong>0</strong>, o jogo recomeça do início.<br>
-    Mantenha-se atento e boa sorte!
-</p>
+                <p>
+                    Eai <strong>Pequeno Player</strong>! 👾<br>
+                    Pronto para ser desafiado?<br>
+                    Se sim, veja como jogar clicando em "<strong>Como Jogar?</strong>"<br><br>
+                    <strong>Regras do jogo:</strong><br>
+                    - Você começa com <strong>3 vidas</strong>.<br>
+                    - A cada pergunta errada, você perde <strong>1 vida</strong>.<br>
+                    - Se suas vidas chegarem a <strong>0</strong>, o jogo recomeça do início.<br>
+                    Mantenha-se atento e boa sorte!
+                </p>
 
 
 
@@ -110,78 +112,82 @@
         </div>
 
 
-        <img src="menino-jogando-videogame_23-2148541964.avif" class="img-effect" alt="" width="300px" style="margin-left: 150px; margin-top: 50px;">
+        <img src="menino-jogando-videogame_23-2148541964.avif" class="img-effect" alt="" width="300px"
+            style="margin-left: 150px; margin-top: 50px;">
 
     </div>
 
 
-     <div class="welcome">
+    <div class="welcome">
         <h1 style="font-size: 60px;" class="text-effect">Bem vindo!</h1>
         <h1 style="border-bottom: solid;
      margin-left: 400px;
      margin-right: 400px;
      animation: bordaCor2 2s linear infinite;">selecione seu nivel de conhecimento!</h1>
     </div>
- <div class="quizgame">
+    <div class="quizgame">
 
-    <div class="py">
-        <h1 class="linguagem" style="margin-right: 200px;">Python</h1>
-        <br>
-        <img src="python-logo (1).png" alt="" class="img-linguagem" width="270px">
+        <div class="py">
+            <h1 class="linguagem" style="margin-right: 200px;">Python</h1>
+            <br>
+            <img src="https://cdn3d.iconscout.com/3d/premium/thumb/python-6815592-5602757.png" alt=""
+                class="img-linguagem" width="270px">
 
-        <details class="detalhes">
-            <summary class="detalhes-smr3">Sobre Python</summary>
-            <p>
-                <strong>QuizGame Python</strong>: <br>
-                Perguntas de acordo com o nível que você selecionou anteriormente.
-            </p>
-        </details>
+            <details class="detalhes">
+                <summary class="detalhes-smr3">Sobre Python</summary>
+                <p>
+                    <strong>QuizGame Python</strong>: <br>
+                    Perguntas de acordo com o nível que você selecionou anteriormente.
+                </p>
+            </details>
 
-        <div class="btn-confirmar">
-            <a href="quizpy.html">Jogar!</a>
+            <div class="btn-confirmar">
+                <a href="quizpy.html">Jogar!</a>
+            </div>
         </div>
-    </div>
 
-    <div class="js">
-        <h1 class="linguagem" style="margin-right: 200px;">JavaScript</h1>
-        <br>
-        <img src="javascript-vector-logo-yellow-png-transparent-javascript-vector-12.png" alt="" class="img-linguagem" width="300px">
+        <div class="js">
+            <h1 class="linguagem" style="margin-right: 200px;">JavaScript</h1>
+            <br>
+            <img src="https://cdn3d.iconscout.com/3d/free/thumb/free-javascript-3d-icon-download-in-png-blend-fbx-gltf-file-formats--html-logo-vue-angular-coding-lang-pack-logos-icons-7577991.png"
+                alt="" class="img-linguagem" width="300px">
 
-        <details class="detalhes">
-            <summary class="detalhes-smr3">Sobre JavaScript</summary>
-            <p>
-                <strong>QuizGame JavaScript</strong>: <br>
-                Perguntas de acordo com o nível que você selecionou anteriormente.
-            </p>
-        </details>
+            <details class="detalhes">
+                <summary class="detalhes-smr3">Sobre JavaScript</summary>
+                <p>
+                    <strong>QuizGame JavaScript</strong>: <br>
+                    Perguntas de acordo com o nível que você selecionou anteriormente.
+                </p>
+            </details>
 
-        <div class="btn-confirmar">
-            <a href="quiz2.html">Jogar!</a>
+            <div class="btn-confirmar">
+                <a href="quiz2.html">Jogar!</a>
+            </div>
         </div>
-    </div>
 
-    <div class="htmlcss">
-        <h1 class="linguagem" style="margin-right: 200px;">HTML & CSS</h1>
-        <br>
-        <img src="R.png" alt="" class="img-linguagem" width="300px">
+        <div class="htmlcss">
+            <h1 class="linguagem" style="margin-right: 200px;">HTML & CSS</h1>
+            <br>
+            <img src="https://logodix.com/logo/470216.png" alt="" class="img-linguagem" width="300px">
 
-        <details class="detalhes">
-            <summary class="detalhes-smr3">Sobre HTML & CSS</summary>
-            <p>
-                <strong>QuizGame HTML & CSS</strong>: <br>
-                Perguntas de acordo com o nível que você selecionou anteriormente.
-            </p>
-        </details>
+            <details class="detalhes">
+                <summary class="detalhes-smr3">Sobre HTML & CSS</summary>
+                <p>
+                    <strong>QuizGame HTML & CSS</strong>: <br>
+                    Perguntas de acordo com o nível que você selecionou anteriormente.
+                </p>
+            </details>
 
-        <div class="btn-confirmar">
-            <a href="quiz3.html">Jogar!</a>
+            <div class="btn-confirmar">
+                <a href="quiz3.html">Jogar!</a>
+            </div>
         </div>
-    </div>
 
-</div>
+    </div>
 
 
 
 
 </body>
+
 </html>
