--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
 
             <div class="fundo-learn">
 
-                <img src="https://cdn.icon-icons.com/icons2/112/PNG/512/python_18894.png" alt="" class="img-fundoLearn"
-                    width="200px">
+                <img src="https://cdn3d.iconscout.com/3d/premium/thumb/python-6815592-5602757.png" alt=""
+                    class="img-fundoLearn" width="200px">
                 <br>
                 <h3 class="escrever">Python</h3>
 
@@ -175,8 +175,8 @@
 
             <div class="fundo-learn">
 
-                <img src="https://logospng.org/download/javascript/logo-javascript-1024.png" alt=""
-                    class="img-fundoLearn" width="200px">
+                <img src="https://cdn3d.iconscout.com/3d/free/thumb/free-javascript-3d-icon-download-in-png-blend-fbx-gltf-file-formats--html-logo-vue-angular-coding-lang-pack-logos-icons-7577991.png"
+                    alt="" class="img-fundoLearn" width="200px">
                 <br>
                 <h3 class="escrever">JavaScript</h3>
 
@@ -422,7 +422,8 @@
         </div>
 
 
-        <img src="4526363.png" alt="" class="img-fundoLearn" width="500px">
+        <img src="https://static.vecteezy.com/system/resources/thumbnails/011/842/283/small_2x/3d-virtual-reality-man-gamer-hands-holding-gaming-console-controller-man-wearing-virtual-reality-glasses-and-floating-in-the-air-playing-a-video-game-video-game-virtual-world-metaverse-png.png"
+            alt="" class="img-fundoLearn" width="500px">
 
     </div>
     <div class="welcome">
