--- a/quizjs.html
+++ b/quizjs.html
@@ -112,7 +112,8 @@
 
 
         <img style="border: none; " class="img-effect"
-            src="javascript-vector-logo-yellow-png-transparent-javascript-vector-12.png" width="300px">
+            src="https://cdn3d.iconscout.com/3d/free/thumb/free-javascript-3d-icon-download-in-png-blend-fbx-gltf-file-formats--html-logo-vue-angular-coding-lang-pack-logos-icons-7577991.png"
+            width="300px">
 
     </div>
 
