--- a/quizpy.html
+++ b/quizpy.html
@@ -111,7 +111,8 @@
         </div>
 
 
-        <img style="border: none; " class="img-effect" src="python-logo (1).png" width="300px">
+        <img style="border: none; " class="img-effect"
+            src="https://cdn3d.iconscout.com/3d/premium/thumb/python-6815592-5602757.png" width="300px">
 
     </div>
 
@@ -302,11 +303,10 @@
 
 
         </div>
-
-
         <button style="margin: 10px;" class="detalhes-smr" onclick="vidasWin()">
             Click em min para ver seu resultado
         </button>
+
 
         <h1 style="color: white;" id="result"></h1>
 
