--- a/road1.html
+++ b/road1.html
@@ -75,7 +75,9 @@
             <div class="img-box">
                 <a href="https://youtube.com/playlist?list=PLHz_AreHm4dmSj0MHol_aoNYCSGFqvfXV&si=Yenv29saHkvuNcZM"
                     target="_blank">
-                    <img class="img-effect" src="9004787.png" alt="Roadmap">
+                    <img class="img-effect"
+                        src="https://static.vecteezy.com/system/resources/previews/007/477/596/original/icon-logic-suitable-for-programming-symbol-two-tone-style-simple-design-editable-design-template-simple-symbol-illustration-vector.jpg"
+                        alt="Roadmap">
                 </a>
             </div>
 
@@ -111,7 +113,8 @@
 
             <div class="img-box">
                 <a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dm6wYOIW20Nyg12TAjmMGT-" target="_blank">
-                    <img class="img-effect" src="python-logo (1).png" alt="Roadmap">
+                    <img class="img-effect" src="https://cdn.icon-icons.com/icons2/112/PNG/512/python_18894.png"
+                        alt="Roadmap">
                 </a>
             </div>
 
@@ -150,7 +153,9 @@
             <div class="img-box">
                 <a href="https://youtube.com/playlist?list=PLzjwaizNOg6TIOp-RxC-_byWJlntCRSg7&si=pbyCWuC3zNGehOVM"
                     target="_blank">
-                    <img class="img-effect" src="4967224.png" alt="Roadmap">
+                    <img class="img-effect"
+                        src="https://static.vecteezy.com/system/resources/previews/011/620/148/original/computer-game-3d-render-icon-illustration-png.png"
+                        alt="Roadmap">
                 </a>
             </div>
 
@@ -188,7 +193,8 @@
             <div class="img-box">
                 <a href="https://youtube.com/playlist?list=PLf913d79oEghoCK56wVz7iGoGfJVo8vo6&si=dc979gYDbb-ceJL3"
                     target="_blank">
-                    <img class="img-effect" src="1875744.png" alt="Roadmap">
+                    <img class="img-effect" src="https://cdn-icons-png.freepik.com/256/3938/3938651.png?semt=ais_hybrid"
+                        alt="Roadmap">
                 </a>
             </div>
 
