Melhorando leyout e Imagens

--- a/aulasHtml5.html
+++ b/aulasHtml5.html
@@ -66,8 +66,7 @@
     </nav>
 
 
-    <h1 style=" margin-left: 200px;
-    margin-right: 200px;
+    <h1 style="
     font-size: 90px;
     border-bottom: none;
 " class="welcome">Olá, Pequeno Gafanhoto <br>
@@ -76,7 +75,7 @@
 
 
 
-    <div style="margin-left: 300px;" class="title-roadmap">
+    <div class="title-roadmap">
         <h3 style="font-size: 30px;" class="ABC">
             <p style="text-align: center;">
                 <strong class="title-rdmp"> Olá Pequeno gafanhoto!</strong><br>
@@ -91,7 +90,9 @@
 
         </h3>
 
-        <img class="img-profs" src="prof 3.webp" alt="" width="350px">
+        <img class="img-profs"
+            src="https://tse4.mm.bing.net/th/id/OIP.EvahIk_cSpDbSoUthgsRxAHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" alt=""
+            width="350px">
     </div>
 
 
@@ -105,12 +106,11 @@
 
                 <h1 class="nA">Aula #1</h1>
                 <br>
-             <iframe class="video" width="560" height="315"
-    src="https://www.youtube.com/embed/HGTJBPNC-Gw"
-    title="YouTube video player" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen>
-</iframe>
+                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/HGTJBPNC-Gw"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
 
 
             </div>
@@ -130,26 +130,26 @@
 
                     </summary>
                     <section class="aula">
-                       <h3>🟢 Resumo – Conceitos Fundamentais</h3><br>
+                        <h3>🟢 Resumo – Conceitos Fundamentais</h3><br>
 
-<p>
-    Aprendemos a <br>
-    <mark>base da lógica de programação</mark> <br>
-    e como o computador <br>
-    entende comandos. <br><br>
+                        <p>
+                            Aprendemos a <br>
+                            <mark>base da lógica de programação</mark> <br>
+                            e como o computador <br>
+                            entende comandos. <br><br>
 
-    Vimos que <br>
-    <mark>a ordem das instruções</mark> <br>
-    muda totalmente o resultado. <br><br>
+                            Vimos que <br>
+                            <mark>a ordem das instruções</mark> <br>
+                            muda totalmente o resultado. <br><br>
 
-    Entendemos que <br>
-    <mark>errar faz parte do aprendizado</mark> <br>
-    e ajuda a evoluir. <br><br>
+                            Entendemos que <br>
+                            <mark>errar faz parte do aprendizado</mark> <br>
+                            e ajuda a evoluir. <br><br>
 
-    No final, ficou claro que <br>
-    <mark>dominar a base</mark> <br>
-    é essencial para avançar.
-</p>
+                            No final, ficou claro que <br>
+                            <mark>dominar a base</mark> <br>
+                            é essencial para avançar.
+                        </p>
 
                     </section>
 
@@ -160,7 +160,7 @@
         </div>
 
 
-        
+
     </div>
 
     <h1 class="welcome">Aulas Descritas</h1>
@@ -191,47 +191,47 @@
                 </summary>
 
                 <section class="aula">
-                  <h2>📘 Aula – Conceitos Fundamentais da Programação</h2><br>
+                    <h2>📘 Aula – Conceitos Fundamentais da Programação</h2><br>
 
-<p>
-Pequeno Gafanhoto, nesta aula você aprende a <mark>base da programação</mark>.<br>
-Aqui o objetivo não é decorar nada, <br>
-mas <mark>entender como pensar como um programador</mark>.<br><br>
+                    <p>
+                        Pequeno Gafanhoto, nesta aula você aprende a <mark>base da programação</mark>.<br>
+                        Aqui o objetivo não é decorar nada, <br>
+                        mas <mark>entender como pensar como um programador</mark>.<br><br>
 
-Você descobre que o computador <br>
-não pensa sozinho, ele apenas <mark>segue ordens</mark>.<br>
-Se as instruções estiverem erradas, <br>
-o resultado também estará.<br><br>
+                        Você descobre que o computador <br>
+                        não pensa sozinho, ele apenas <mark>segue ordens</mark>.<br>
+                        Se as instruções estiverem erradas, <br>
+                        o resultado também estará.<br><br>
 
-Um exemplo simples, Pequeno Gafanhoto:<br>
-se você pedir para alguém <br>
-vestir o tênis <mark>antes da meia</mark>,<br>
-o resultado não faz sentido.<br>
-Na programação é a mesma coisa: <br>
-<mark>a ordem importa</mark>.<br><br>
+                        Um exemplo simples, Pequeno Gafanhoto:<br>
+                        se você pedir para alguém <br>
+                        vestir o tênis <mark>antes da meia</mark>,<br>
+                        o resultado não faz sentido.<br>
+                        Na programação é a mesma coisa: <br>
+                        <mark>a ordem importa</mark>.<br><br>
 
-Durante a aula, você entende que <br>
-todo programa segue uma lógica:<br>
-<mark>entrada → processamento → saída</mark>.<br>
-Primeiro o programa recebe dados,<br>
-depois pensa, <br>
-e só então mostra o resultado.<br><br>
+                        Durante a aula, você entende que <br>
+                        todo programa segue uma lógica:<br>
+                        <mark>entrada → processamento → saída</mark>.<br>
+                        Primeiro o programa recebe dados,<br>
+                        depois pensa, <br>
+                        e só então mostra o resultado.<br><br>
 
-Pequeno Gafanhoto também aprende que <br>
-<mark>errar é normal</mark>.<br>
-Cada erro é uma chance de aprender,<br>
-corrigir e melhorar o raciocínio.<br><br>
+                        Pequeno Gafanhoto também aprende que <br>
+                        <mark>errar é normal</mark>.<br>
+                        Cada erro é uma chance de aprender,<br>
+                        corrigir e melhorar o raciocínio.<br><br>
 
-A aula reforça que <br>
-programar não é só escrever código,<br>
-mas <mark>resolver problemas passo a passo</mark>.<br>
-Quanto mais você entende a base,<br>
-mais fácil será aprender coisas avançadas.<br><br>
+                        A aula reforça que <br>
+                        programar não é só escrever código,<br>
+                        mas <mark>resolver problemas passo a passo</mark>.<br>
+                        Quanto mais você entende a base,<br>
+                        mais fácil será aprender coisas avançadas.<br><br>
 
-No final, Pequeno Gafanhoto percebe que <br>
-<mark>dominar os fundamentos</mark> <br>
-é o verdadeiro segredo para evoluir na programação.
-</p>
+                        No final, Pequeno Gafanhoto percebe que <br>
+                        <mark>dominar os fundamentos</mark> <br>
+                        é o verdadeiro segredo para evoluir na programação.
+                    </p>
 
                 </section>
 
