--- a/aulasJs3.html
+++ b/aulasJs3.html
@@ -91,7 +91,9 @@
 
     </h3>
 
-    <img class="img-profs" src="prof2.webp" alt="" width="350px">
+    <img class="img-profs"
+      src="https://vp2uploads.s3.amazonaws.com/18443/81/palestrantes/81cd9c37c4beeb851b28ebc95c619b5ffb0ff9b3.png"
+      alt="prof-image" width="350px">
   </div>
 
 
