--- a/aulasJs4.html
+++ b/aulasJs4.html
@@ -66,8 +66,8 @@
     </nav>
 
 
-    <h1 style=" margin-left: 200px;
-    margin-right: 200px;
+    <h1 style=" 
+    
     font-size: 90px;
     border-bottom: none;
 " class="welcome">Olá, Pequeno Gafanhoto <br>
@@ -76,7 +76,7 @@
 
 
 
-    <div style="margin-left: 300px;" class="title-roadmap">
+    <div class="title-roadmap">
         <h3 style="font-size: 30px;" class="ABC">
             <p style="text-align: center;">
                 <strong class="title-rdmp"> Olá Pequeno gafanhoto!</strong><br>
@@ -91,7 +91,9 @@
 
         </h3>
 
-        <img class="img-profs" src="prof 3.webp" alt="" width="350px">
+        <img class="img-profs"
+            src="https://tse4.mm.bing.net/th/id/OIP.EvahIk_cSpDbSoUthgsRxAHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" alt=""
+            width="350px">
     </div>
 
 
