--- a/aulasPy2.html
+++ b/aulasPy2.html
@@ -66,8 +66,7 @@
   </nav>
 
 
-  <h1 style=" margin-left: 200px;
-    margin-right: 200px;
+  <h1 style=" 
     font-size: 90px;
     border-bottom: none;
 " class="welcome">Olá, Pequeno Gafanhoto <br>
@@ -76,7 +75,7 @@
 
 
 
-  <div style="margin-left: 300px;" class="title-roadmap">
+  <div class="title-roadmap">
     <h3 style="font-size: 30px;" class="ABC">
       <p style="text-align: center;">
         <strong class="title-rdmp"> Olá Pequeno gafanhoto!</strong><br>
@@ -91,7 +90,9 @@
 
     </h3>
 
-    <img class="img-profs" src="prof2.webp" alt="" width="350px">
+    <img class="img-profs"
+      src="https://vp2uploads.s3.amazonaws.com/18443/81/palestrantes/81cd9c37c4beeb851b28ebc95c619b5ffb0ff9b3.png"
+      alt="" width="350px">
   </div>
 
 
