--- a/game1.html
+++ b/game1.html
@@ -112,8 +112,8 @@
         </div>
 
 
-        <img src="menino-jogando-videogame_23-2148541964.avif" class="img-effect" alt="" width="300px"
-            style="margin-left: 150px; margin-top: 50px;">
+        <img src="https://static.vecteezy.com/system/resources/previews/013/361/343/original/3d-render-man-playing-sport-game-using-vr-free-png.png"
+            class="img-effect" alt="" width="300px" style="margin-left: 150px; margin-top: 50px;">
 
     </div>
 
