--- a/index.html
+++ b/index.html
@@ -429,8 +429,8 @@
     <div class="welcome">
         <h1 style="font-size: 60px;" class="text-effect">Bem vindo!</h1>
         <h1 style="border-bottom: solid;
-     margin-left: 400px;
-     margin-right: 400px;
+  
+     
      animation: bordaCor2 2s linear infinite;">selecione seu nivel de conhecimento!</h1>
     </div>
     <div class="quizgame">
@@ -438,7 +438,7 @@
 
         <div class="nivel1">
 
-            <h1 style="margin-right: 200px;" class="niveis-text">
+            <h1 class="niveis-text">
                 Iniciante</h1>
 
             <br>
@@ -470,7 +470,7 @@
 
 
         <div class="nivel2">
-            <h1 style="margin-right: 200px;" class="niveis-text">
+            <h1 class="niveis-text">
                 Estudioso</h1>
 
             <br>
@@ -499,7 +499,7 @@
 
         <div class="nivel3">
 
-            <h1 style="margin-right: 200px;" class="niveis-text">
+            <h1 class="niveis-text">
                 Programador</h1>
 
             <br>
