--- a/js.html
+++ b/js.html
@@ -97,8 +97,8 @@
 
         </div>
 
-        <img src="https://logospng.org/download/javascript/logo-javascript-1024.png" alt="" class="img-effect"
-            width="350px">
+        <img src="https://cdn3d.iconscout.com/3d/free/thumb/free-javascript-3d-icon-download-in-png-blend-fbx-gltf-file-formats--html-logo-vue-angular-coding-lang-pack-logos-icons-7577991.png"
+            alt="" class="img-effect" width="350px">
 
     </div>
 
@@ -203,7 +203,7 @@
 
             </details>
 
-            <div class="btn-confirmar"> <a href="aulasjs3.html">Aprender</a> </div>
+            <div class="btn-confirmar"> <a href="aulasJs3.html">Aprender</a> </div>
 
         </div>
 
