--- a/python.html
+++ b/python.html
@@ -97,8 +97,8 @@
 
         </div>
 
-        <img style="  border-radius: 50%;" src="https://cdn.icon-icons.com/icons2/112/PNG/512/python_18894.png" alt=""
-            class="img-effect" width="350px">
+        <img style="  border-radius: 50%;" src="https://cdn3d.iconscout.com/3d/premium/thumb/python-6815592-5602757.png"
+            alt="" class="img-effect" width="350px">
 
     </div>
 
